--- a/cosmic_protocols/overlap_notify/v1/server/zcosmic_overlap_notification_v1/struct.ZcosmicOverlapNotificationV1.html
+++ b/cosmic_protocols/overlap_notify/v1/server/zcosmic_overlap_notification_v1/struct.ZcosmicOverlapNotificationV1.html
@@ -21,6 +21,7 @@ representing this toplevel.</p>
 </div></details><details class="toggle method-toggle" open><summary><section id="method.layer_enter" class="method"><a class="src rightside" href="../../../../../src/cosmic_protocols/lib.rs.html#85-88">source</a><h4 class="code-header">pub fn <a href="#method.layer_enter" class="fn">layer_enter</a>(
     &amp;self,
     identifier: <a class="struct" href="https://doc.rust-lang.org/1.82.0/alloc/string/struct.String.html" title="struct alloc::string::String">String</a>,
+    namespace: <a class="struct" href="https://doc.rust-lang.org/1.82.0/alloc/string/struct.String.html" title="struct alloc::string::String">String</a>,
     exclusive: <a class="primitive" href="https://doc.rust-lang.org/1.82.0/std/primitive.u32.html">u32</a>,
     layer: <a class="enum" href="../../../../../wayland_protocols_wlr/layer_shell/v1/generated/server/zwlr_layer_shell_v1/enum.Layer.html" title="enum wayland_protocols_wlr::layer_shell::v1::generated::server::zwlr_layer_shell_v1::Layer">Layer</a>,
     x: <a class="primitive" href="https://doc.rust-lang.org/1.82.0/std/primitive.i32.html">i32</a>,
